# Multi-Terminal

./: .gitignore  CONTRACT.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
assets/: gen_social.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: gen.py  icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: fs.rs  mod.rs  settings.rs  shell.rs  terminal.rs  window.rs
src-tauri/src/config/: defaults.rs  mod.rs
src-tauri/src/pty/: manager.rs  mod.rs
src/components/AppShell/: AppShell.css  AppShell.tsx
src/components/CommandPalette/: CommandPalette.css  CommandPalette.tsx
src/components/ContextMenu/: ContextMenu.css  ContextMenu.tsx
src/components/NewTabDialog/: DirectoryPicker.tsx  LayoutPicker.tsx  NewTabDialog.css  NewTabDialog.tsx  index.ts  recentDirs.ts
src/components/Settings/: Settings.css  SettingsModal.tsx  SettingsSidebar.tsx  index.ts
src/components/SplitPane/: Pane.tsx  Split.tsx  SplitPane.css  (+2 more)
src/hooks/: useContextMenu.ts  useHotkeys.ts
src/lib/: commands.ts  events.ts  tauri.ts
src/store/: index.ts  layout.ts  settings.ts  tabs.ts  terminals.ts  themes.ts
src/styles/: animations.css  globals.css  reset.css  scrollbar.css  variables.css
src/themes/: ayu-dark.ts  catppuccin-mocha.ts  dracula.ts  github-light.ts  gruvbox-dark.ts  index.ts  monokai-pro.ts  nord.ts  one-dark.ts  solarized-dark.ts  tokyo-night.ts
src/types/: index.ts
(+44 files in other folders)
