[package]
name = "multiterminal"
version = "1.0.0"
description = "Multi-terminal app with tabs, splits, themes, and a command palette"
authors = ["Enes Karademir"]
license = "MIT"
repository = "https://github.com/eneskrdm/Multi-Terminal"
edition = "2021"
rust-version = "1.77"

[lib]
name = "multiterminal_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
thiserror = "2"
dirs = "5"
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = 3
strip = true
